--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/comercial?useSSL=false
+spring.datasource.url=jdbc:mysql://containers-us-west-120.railway.app:7707/railway
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=v2E4LO2CBwrgIfjKciMX
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
